--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: php
 php:
+  - '8.1'
+  - '8.0'
   - '7.4'
   - '7.3'
   - '7.2'
@@ -11,7 +13,7 @@ before_install:
   - export COMPOSER_MEMORY_LIMIT=-1
 install: composer install
 
-script: vendor/bin/phpunit
+script: vendor/bin/simple-phpunit
 
 branches:
   except:
