--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "ext-json": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5",
+    "symfony/phpunit-bridge": "^5.2",
     "phpmd/phpmd": "*",
     "squizlabs/php_codesniffer": "3.*",
     "friendsofphp/php-cs-fixer": "*",
