--- a/composer.json
+++ b/composer.json
@@ -24,18 +24,18 @@
     "issues": "https://github.com/cloudinary/php-transformation-builder-sdk/issues"
   },
   "require": {
-    "php": ">=5.6.0",
+    "php": ">=8.0.0",
     "ext-json": "*"
   },
   "require-dev": {
-    "symfony/phpunit-bridge": "^5.2",
+    "symfony/phpunit-bridge": "^7.2",
     "phpmd/phpmd": "*",
-    "squizlabs/php_codesniffer": "3.*",
+    "squizlabs/php_codesniffer": "*",
     "friendsofphp/php-cs-fixer": "*",
     "ext-dom": "*",
     "ext-libxml": "*",
     "ext-zip": "*",
-    "consolidation/robo": "~1"
+    "consolidation/robo": "~5"
   },
   "autoload": {
     "classmap": [
