--- a/phpstan.neon
+++ b/phpstan.neon
@@ -4,3 +4,5 @@ parameters:
         - src
     ignoreErrors:
         - '#Unsafe usage of new static\(\)#'
+        #- '#Method .+ has parameter \$[a-zA-Z0-9_]+ with no value type specified in iterable type array#'
+        #- '#Method .+ return type has no value type specified in iterable type array#'
